--- a/src/interface/templates/questionnaire/questionnaire.html
+++ b/src/interface/templates/questionnaire/questionnaire.html
@@ -77,7 +77,11 @@
 
                     'qst_must': '{{ qst.qst_must }}',
                     'min_selected': '{{ qst.min_selected }}',
-                    'max_selected': '{{ qst.max_selected }}'
+                    'max_selected': '{{ qst.max_selected }}',
+
+                    'display_vote': '{{ qst.display_vote }}',
+                    'ip_times': '{{ qst.ip_times }}',
+                    'day_times': '{{ qst.day_times }}'
 
                 }
             //    alert("fillin_id: " + "{{ fillin_id }}" + '.');
