--- a/src/interface/templates/legalUser/design/design.ajax.html
+++ b/src/interface/templates/legalUser/design/design.ajax.html
@@ -143,7 +143,7 @@
     </div>
     <div class="col-md-2 container right-column">
 
-        <ul class="nav nav-stacked nav-pills affix">
+        <ul class="nav nav-stacked nav-pills affix" id="right">
             <li id="single-question" class="nav-header ">
                 <a class="fake-link"><i class="fa fa-dot-circle-o fa-fw"></i>　单选题</a>
             </li>
@@ -176,6 +176,7 @@
             <li align="center">
                 <button type="button" class="btn btn-default btn-block" id="publish_btn" style="font-size: 15px;">发布</button>
             </li>
+            
 
         </ul>
 
