--- a/src/interface/templates/manager/application_2/applications_content.html
+++ b/src/interface/templates/manager/application_2/applications_content.html
@@ -25,7 +25,7 @@
                 <div id="app_all{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                     <ul>
                         <li style="width: 20%" align="center">
-                            <a class="fake-link" href="javascript:showModal('{% url 'manager/modal' %}', 'information-modal', {'modal_type': 'information', 'username': {{ app.name }}});" >
+                            <a class="fake-link" href="javascript:showModal('{% url 'manager/modal' %}', 'information-modal', {'modal_type': 'information', 'username': '{{ app.name }}' });" >
                                 <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i>  查看信息
                             </a>
                         </li>
