--- a/src/interface/templates/manager/notice/manager_notice.ajax.html
+++ b/src/interface/templates/manager/notice/manager_notice.ajax.html
@@ -53,7 +53,7 @@
             handleFormPost("#notice_content", "{% url 'api/notice_act' %}", {
                 success_callback: function (data) {
                     if (data['status'] === 'ok') {
-                        alert('公告发布成功')
+                        showConfirmModal('提示', '公告发布成功', true);
                     }
                 }
             });
