--- a/src/interface/templates/questionnaire/questionnaire.html
+++ b/src/interface/templates/questionnaire/questionnaire.html
@@ -39,24 +39,21 @@
                 <input id="submitTime" value="none" name="submitTime" type="text" style="display: none ;">
                 <input id="ip" value="none" name="IP" type="text" style="display: none ;">
                 <input id="address" value="none" name="address" type="text" style="display: none ;">
-                <div class="modal-body">
-                    <div class="control-group row">
-                        <ol class="questions-list">
-                            <li class="question last-question">
+                <div class="control-group row">
+                    <ol class="questions-list">
+                        <li class="question last-question">
 
-                            </li>
-                        </ol>
-                    </div>
+                        </li>
+                    </ol>
                 </div>
-                    
-                <div class="modal-footer">
-                    <div id="submit-button-field">
-                            <button id="submit_btn" onclick="return getTime();" type="submit" class="btn btn-primary btn-block form-btn" style="font-size: 15px">
-                                完成
-                            </button>
-                    </div>
+
+                <div id="submit-button-field">
+                    <button id="submit_btn" onclick="return getTime();" type="submit" class="btn btn-primary btn-block form-btn" style="font-size: 15px">
+                        完成
+                    </button>
                 </div>
             </form>
+</form>
         {% block content-after %}
         {% endblock content-after %}
 
