--- a/src/interface/templates/base.html
+++ b/src/interface/templates/base.html
@@ -29,15 +29,20 @@
     {% endblock css %}
     <!-- script references -->
     <script src="{% static 'jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.js' %}"></script>
     <script src="{% static 'jquery/jquery.history.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.scrollto.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.fixer.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.qrcode.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
     <script src="{% static 'base/js/scripts.js' %}"></script>
+    <script src="{% static 'js/jquery.validationEngine-en.js' %}" charset="utf-8"></script>
+    <script src="{% static 'js/jquery.validationEngine.js' %}" charset="utf-8"></script>
+    <script src="{% static 'jquery/jquery.validate.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.validate.js' %}"></script>
 
     <script src="{% static 'md5/md5.min.js' %}"></script>
-    <script src="{% static 'validator/validator.min.js' %}"></script>
+    <!--script src="{% static 'validator/validator.min.js' %}"></script-->
 
     <script src="{% static 'icheck-1.x/icheck.js' %}"></script>
 
