优化了邮件发布流程

--- a/src/interface/templates/legalUser/information/user_information_change.ajax.html
+++ b/src/interface/templates/legalUser/information/user_information_change.ajax.html
@@ -138,5 +138,8 @@
     else if("{{ gender }}" == '其它'){
         ss[2].selected = true;
     }
+    else{
+        ss[0].selected = true;
+    }
 </script>
 
