--- a/src/interface/templates/manager/application/applications_content.html
+++ b/src/interface/templates/manager/application/applications_content.html
@@ -23,17 +23,17 @@
             <td  colspan="10" style="display:none;" id="app_all{{forloop.counter}}_td">
                 <div id="app_all{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                     <ul>
-                        <li style="width: 20%" align="center">
+                        <li style="width: 30%" align="center">
                             <a class="fake-link" href="http://www.baidu.com" target =_blank >
                                 <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i>  查看活动
                             </a>
                         </li>
-                        <li style="width: 20%" align="center">
+                        <li style="width: 30%" align="center">
                             <a class="fake-link" href="javascript:showModal('{% url 'manager/modal' %}', 'information-modal', {'modal_type': 'information', 'username': '{{ app.publisher }}',});">
-                                <i class="fa fa-user fa-fw fa-2x" aria-hidden="true"></i> 查看发布者
+                                <i class="fa fa-user fa-fw fa-2x" aria-hidden="true"></i> 查看发布者信息
                             </a>
                         </li>
-                        <li style="width: 20%" align="center">
+                        <li style="width: 30%" align="center">
                             <a class="fake-link" href="javascript:showConfirmModal('删除活动', '确定要删除吗？', true)" >
                                 <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除活动
                             </a>
