--- a/src/interface/templates/manager/application_2/applications_content.html
+++ b/src/interface/templates/manager/application_2/applications_content.html
@@ -24,14 +24,15 @@
             <td  colspan="10" style="display:none;" id="app_all{{forloop.counter}}_td">
                 <div id="app_all{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                     <ul>
-                        <li style="width: 20%" align="center">
+                        <li style="width: 20%" align="center"></li>
+                        <li style="width: 40%" align="center">
                             <a class="fake-link" href="javascript:showModal('{% url 'manager/modal' %}', 'information-modal', {'modal_type': 'information', 'username': '{{ app.name }}' });" >
-                                <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i>  查看信息
+                                <i class="fa fa-user fa-fw fa-2x" aria-hidden="true"></i>  查看用户信息
                             </a>
                         </li>
-                        <li style="width: 20%" align="center">
-                            <a class="fake-link" href="#" >
-                                <i class="fa fa-phone-square fa-fw fa-2x" aria-hidden="true"></i> 发送站内信
+                        <li style="width: 40%" align="center">
+                            <a class="fake-link" href="javascript:showConfirmModal('提示', '站内信功能正在开发中', true)" >
+                                <i class="fa fa-commenting fa-fw fa-2x" aria-hidden="true"></i> 发送站内信
                             </a>
                         </li>
                     </ul>
