--- a/src/interface/templates/legalUser/design/modal/information_modal.html
+++ b/src/interface/templates/legalUser/design/modal/information_modal.html
@@ -9,67 +9,67 @@
 
 
             <div class="modal-footer">
-                <div class="row" style="text-align: center;">
+                <div class="row" style="text-align: left;">
                     <div class="col-xs-6 form-group">
                         <label class="control-label pull-left" >用户类别：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >legalUser</strong>
+                        <div style="resize: vertical; width: 80%;" >用户</div>
                     </div>
                 </div>
                 <br>
-                <div class="row" style="text-align: center;">
-                    <div class="col-xs-6 form-group">
+                <div class="row" style="text-align: left;">
+                    <div class="col-xs-7 form-group">
                         <label class="control-label pull-left" >用户名：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ username }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ username }}</div>
                     </div>
-                    <div class="col-xs-6 form-group">
+                    <div class="col-xs-5 form-group">
                         <label class="control-label pull-left" >真实姓名：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ real_name }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ real_name }}</div>
                     </div>
                 </div>
                 <br>
-                <div class="row" style="text-align: center;">
-                    <div class="col-xs-6 form-group">
+                <div class="row" style="text-align: left;">
+                    <div class="col-xs-7 form-group">
                         <label class="control-label pull-left" >邮箱：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ email }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ email }}</div>
                     </div>
-                    <div class="col-xs-6 form-group">
+                    <div class="col-xs-5 form-group">
                         <label class="control-label pull-left" >联系方式：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ telephone_number }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ telephone_number }}</div>
                     </div>
                 </div>
                 <br>
-                <div class="row" style="text-align: center;">
-                    <div class="col-xs-6 form-group">
+                <div class="row" style="text-align: left;">
+                    <div class="col-xs-7 form-group">
                         <label class="control-label pull-left" >年龄：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ age }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ age }}</div>
                     </div>
-                    <div class="col-xs-6 form-group">
+                    <div class="col-xs-5 form-group">
                         <label class="control-label pull-left" >性别：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ gender }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ gender }}</div>
                     </div>
                 </div>
                 <br>
-                 <div class="row" style="text-align: center;">
+                 <div class="row" style="text-align: left;">
                     <div class="col-xs-12 form-group">
                         <label class="control-label pull-left" >住址：</label>
 
-                        <strong style="resize: vertical; width: 80%;" >{{ address }}</strong>
+                        <div style="resize: vertical; width: 80%;" >{{ address }}</div>
                     </div>
                  </div>
                 <br>
-                 <div class="row" style="text-align: center;">
+                 <div class="row" style="text-align: left;">
                     <div class="col-xs-12 form-group">
                         <label class="control-label pull-left" >状态：</label>
 
-                        <strong style="resize: vertical; width: 80%; word-break: break-all; text-overflow: ellipsis;
-                            display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden" >{{ status }}</strong>
+                        <div style="resize: vertical; width: 80%; word-break: break-all; text-overflow: ellipsis;
+                            display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden" >{{ status }}</div>
                     </div>
                 </div>
             </div>
