--- a/src/interface/templates/manager/application/applications_content.html
+++ b/src/interface/templates/manager/application/applications_content.html
@@ -24,7 +24,7 @@
                 <div id="app_all{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                     <ul>
                         <li style="width: 30%" align="center">
-                            <a class="fake-link" href="http://www.baidu.com" target =_blank >
+                            <a class="fake-link" href="#" target =_blank >
                                 <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i>  查看活动
                             </a>
                         </li>
